[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://img/player_remake.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.2267, 21.5398 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -2.49701, 1.64001 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HullSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 10

[node name="ShieldSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 10
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true
